[workspace]
members = ["interpol-impl"]

[package]
name = "interpol"
version = "0.1.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

description = "String interpolation macros"
repository = "https://github.com/tanakh/interpol"
license = "MIT"
readme = "README.md"

categories = ["text-processing"]
keywords = ["text", "string interpolation"]

[dependencies]
interpol-impl = { version = "0.1", path = "interpol-impl" }
proc-macro-hack = "0.5"
