[package]
name = "interpol"
version = "0.2.1"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

description = "String interpolation macros"
repository = "https://github.com/tanakh/interpol"
license = "MIT"
readme = "README.md"

categories = ["text-processing"]
keywords = ["text", "interpolation"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
