[package]
name = "interpol-impl"
version = "0.1.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

description = "String interpolation macros implementation package"
repository = "https://github.com/tanakh/interpol"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-hack = "0.5"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
